# Pr-Echo-GPU

./: .gitignore  CMakeLists.txt  FrameEcho.r  FrameEcho.rc  LICENSE  README.md  history.md
include/: PrGPUFilterModule.h
src/: FrameEchoAeGpu.cpp  FrameEchoAeSmartRender.h  FrameEchoCore.cpp  FrameEchoCore.h  FrameEchoCore_SIMD_AVX2.cpp  FrameEchoCore_SIMD_AVX512.cpp  FrameEchoCore_SIMD_SSE2.cpp  FrameEchoEffect.cpp  FrameEchoParams.h  FrameEchoPrGpu.cpp  FrameEchoSmartRender.cpp
src/kernels/: FrameEchoBlend.cl  FrameEchoBlend.cu  FrameEchoBlend.hlsl  bin2h.py  line_path_removal_inplace.py
